need to correct the todo list flex item spacing. Need to add sidebar items. Need to change the background color of the todo list while it is being edited.

--- a/Practice 2 super simple dev/styles.css
+++ b/Practice 2 super simple dev/styles.css
@@ -3,28 +3,61 @@
 * {
   margin: 0px;
   padding: 0px;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
 body {
   font-family: "Nanum Gothic", sans-serif;
+  height: 100%;
 }
 
 p {
   margin: 0px 0px;
 }
 
-.container {
+header {
+  height: 70px;
+  padding: 8px;
+  box-shadow: 0px 0px 5px black;
+}
+.header-container {
+  margin-left: 20px;
+  margin-top: 10px;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+}
+.header-container h1 {
+  font-weight: 500;
+}
+.header-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  margin-right: 6px;
+  transition: 0.15s;
+}
+.header-icon:hover {
+  background-color: rgb(239, 239, 239);
+}
+.header-icon i {
+  line-height: 50px;
+  font-size: 20px;
 }
 
-.todo-list {
+.container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.list-container {
   width: 100%;
   height: 500px;
   margin-top: 10px;
   margin-right: 12px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 16px 24px;
   font-size: 20px;
   /*   display: flex;
   flex-direction: column;
@@ -34,15 +67,17 @@ p {
   height: 800px;
   width: 200px;
   z-index: 100;
+  padding: 16px 0px;
 }
 /* Add Todo Bar */
-.add-todo-bar {
+
+.add-bar {
   display: flex;
   flex-direction: row;
   height: 50px;
-  border: 2px solid rgb(95, 95, 95);
-  border-radius: 4px;
-  background-color: rgb(206, 206, 206);
+  border: none;
+  border-radius: 20px;
+  background-color: rgb(239, 239, 239);
   margin-bottom: 4px;
   margin-right: 12px;
   padding-right: 25px;
@@ -51,28 +86,41 @@ p {
   align-items: center;
   z-index: 1;
 }
-.add-todo-bar {
-  flex-direction: row;
+.add-bar #todo-title {
+  font-size: 20px;
+  border: none;
+  padding-left: 14px;
+  flex: 4;
+  height: 40px;
+  margin: auto;
+  margin-left: 15px;
 }
+
+.add-bar #todo-title:focus {
+  outline: none;
+}
+
+/* May not need this property */
 .add-bar-item {
   margin: 20px;
 }
 
-.add-todo-bar #date-picker {
-  flex: 0.5;
+.add-bar #date-picker {
+  flex: 0.3;
+  max-width: 50px;
 }
-.add-todo-bar #todo-title {
-  flex: 2;
-  height: 40px;
-}
-.add-todo-bar button {
+
+.add-bar button {
   color: white;
+  flex: 0.25;
   height: 25px;
   border: none;
   border-radius: 12.5px;
   background-color: rgb(27, 40, 46);
+  white-space: nowrap;
 }
 
+/* Main Todo List */
 .todo-item {
   height: 50px;
   margin-right: 14px;
@@ -80,6 +128,7 @@ p {
   flex-direction: row;
   justify-content: center;
   display: flex;
+  transition: 0.15s;
 }
 
 .todo-item:hover {
@@ -99,17 +148,42 @@ p {
   font-size: 14px;
   font-weight: 200;
   font-style: italic;
-  margin: auto;
+  margin-left: 38px;
   order: -1;
-  flex: 0.5;
-  text-align: center;
+  flex: 0.18;
+  line-height: 52px;
 }
 .todo-item input {
   margin-right: 12.5px;
   margin-left: 25px;
 }
+
+/* Editing + Updating Todos */
+.todo-item input[type="date"] {
+  order: -1;
+  height: 25px;
+  align-self: center;
+}
+.todo-item input[type="text"] {
+  font-size: 20px;
+  border: none;
+  border-bottom: 1px solid green;
+  padding-left: 14px;
+  flex: 2;
+  height: 40px;
+  margin: auto;
+  margin-right: 30px;
+}
+.todo-item input[type="text"]:focus {
+  outline: none;
+}
+
+.todo-item .update-button {
+  margin-right: 55px;
+}
 /* Buttons */
-.todo-item button {
+.todo-item button,
+.add-bar button {
   font-family: "Nanub Gothic", sans-serif;
   font-weight: 200;
   font-size: 14px;
@@ -121,10 +195,16 @@ p {
   border-radius: 16px;
   background-color: rgb(25, 84, 112);
   align-self: center;
+  line-height: 27px;
+  transition: 0.15s;
 }
 
 .todo-item button:hover,
-input:hover,
-.add-todo-bar button:hover {
+.add-bar button:hover {
+  transform: scale(95%);
+}
+.todo-item button:hover,
+input[type="date"]:hover,
+.add-bar button:hover {
   cursor: pointer;
 }
